--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,13 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/editText" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="164dp"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        tools:layout_editor_absoluteX="102dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
