--- a/calcultor/app/src/main/res/layout/activity_main.xml
+++ b/calcultor/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,25 @@
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:id="@+id/resultview"
         android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="40dp"
             android:id="@+id/mytextview"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:textAlignment="viewEnd"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/myanswer"
+            android:textSize="30dp"
+            android:layout_marginTop="50dp"
+            android:textAlignment="viewEnd"/>
+
     </LinearLayout>
 
     <LinearLayout
